Fixed Bug #40274 (Sessions fail with numeric root keys).